--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
       <section>
         <ul class="index">
           <li>
+            <h2 class="caption">ファンサイト</h2>
+            <ul class="link-list">
+              <li>
+                <a href="./site/addToHome.html"
+                  >サイトをスマホのホーム画面に追加する</a
+                >
+              </li>
+            </ul>
+          </li>
+          <li>
             <h2 class="caption">談話室TA801（チャットルーム）</h2>
             <ul class="link-list">
               <li><a href="./chat/open.html">チャットを開く</a></li>
