--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
             <h2 class="caption">ファンサイト</h2>
             <ul class="link-list">
               <li>
-                <a href="./site/addToHome.html"
-                  >サイトをスマホのホーム画面に追加する</a
-                >
+                <a href="./site/addToHome.html">
+                  サイトをスマホのホーム画面に追加する
+                </a>
               </li>
             </ul>
           </li>
