--- a/chat/mention.html
+++ b/chat/mention.html
@@ -15,20 +15,27 @@
     </header>
     <body>
       <section>
+        <div class="link">
+          <a href="./open.html">この画面の出し方</a>
+        </div>
         <div class="procedure">
           <div class="step">
-            <img src="../img/chat/chat1.png" alt="" />
+            <img src="../img/chat/chat3.png" alt="" />
+            <p>メンションしたい相手のアイコンをタップする。</p>
+          </div>
+          <div class="step">
+            <img src="../img/chat/chat7.png" alt="" />
+            <p>「話しかける」をタップ。</p>
+          </div>
+          <div class="step">
+            <img src="../img/chat/chat8.png" alt="" />
             <p>
-              タイムラインの右上の吹き出しアイコンをタップする。新しいコメントがあるとここに数字が表示される。
+              「@ユーザー名」の後にメッセージを入力して「送信」ボタンをタップ。
             </p>
           </div>
           <div class="step">
-            <img src="../img/chat/chat2.png" alt="" />
-            <p>開きたい部屋を選択。</p>
-          </div>
-          <div class="step">
-            <img src="../img/chat/chat3.png" alt="" />
-            <p>完了。</p>
+            <img src="../img/chat/chat9.png" alt="" />
+            <p>相手の画面にも通知が行きます。</p>
           </div>
         </div>
         <div class="back-button">
