--- a/chat/message.html
+++ b/chat/message.html
@@ -21,11 +21,11 @@
         <div class="procedure">
           <div class="step">
             <img src="../img/chat/chat3.png" alt="" />
-            <p>画面下の「メッセージを入力」をタップ</p>
+            <p>画面下の「メッセージを入力」をタップ。</p>
           </div>
           <div class="step">
             <img src="../img/chat/chat6.png" alt="" />
-            <p>メッセージを入力して「送信」ボタンをタップ</p>
+            <p>メッセージを入力して「送信」ボタンをタップ。</p>
           </div>
         </div>
         <div class="back-button">
