--- a/chat/reply.html
+++ b/chat/reply.html
@@ -22,16 +22,16 @@
           <div class="step">
             <img src="../img/chat/chat3.png" alt="" />
             <p>
-              リプライしたいメッセージを<span class="red-text">長押し</span>
+              リプライしたいメッセージを<span class="red-text">長押し</span>。
             </p>
           </div>
           <div class="step">
             <img src="../img/chat/chat4.png" alt="" />
-            <p>「リプライ」をタップ</p>
+            <p>「リプライ」をタップ。</p>
           </div>
           <div class="step">
             <img src="../img/chat/chat5.png" alt="" />
-            <p>メッセージを入力して「送信」ボタンをタップ</p>
+            <p>メッセージを入力して「送信」ボタンをタップ。</p>
           </div>
         </div>
         <div class="back-button">
