--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
               <li><a href="./chat/open.html">チャットを開く</a></li>
               <li><a href="./chat/message.html">メッセージを入力する</a></li>
               <li><a href="./chat/reply.html">リプライをする</a></li>
+              <li><a href="./chat/mention.html">メンションをする</a></li>
             </ul>
           </li>
         </ul>
