--- a/index.html
+++ b/index.html
@@ -21,8 +21,11 @@
             <ul class="link-list">
               <li>
                 <a href="./site/addToHome.html">
-                  サイトをスマホのホーム画面に追加する
+                  サイトをスマホのホーム画面に追加する（Android）
                 </a>
+              </li>
+              <li>
+                <a href="./site/schedule.html"> スケジュールを確認する。 </a>
               </li>
             </ul>
           </li>
