--- a/index.html
+++ b/index.html
@@ -20,12 +20,15 @@
             <h2 class="caption">ファンサイト</h2>
             <ul class="link-list">
               <li>
-                <a href="./site/addToHome.html">
-                  サイトをスマホのホーム画面に追加する（Android）
-                </a>
+                <a href="./site/howToGo.html"> ファンサイトを見る。 </a>
               </li>
               <li>
                 <a href="./site/schedule.html"> スケジュールを確認する。 </a>
+              </li>
+              <li>
+                <a href="./site/addToHome.html">
+                  サイトをスマホのホーム画面に追加する（Android）
+                </a>
               </li>
             </ul>
           </li>
