--- a/site/addToHome.html
+++ b/site/addToHome.html
@@ -15,6 +15,9 @@
     </header>
     <body>
       <section>
+        <div class="link">
+          <a href="./howToGo.html"> この画面を出す </a>
+        </div>
         <div class="procedure">
           <div class="step">
             <img src="../img/site/site1.png" alt="" />
