--- a/site/howToGo.html
+++ b/site/howToGo.html
@@ -15,26 +15,22 @@
     </header>
     <body>
       <section>
-        <div class="link">
-          <a href="./howToGo.html"> この画面を出す </a>
-        </div>
         <div class="procedure">
           <div class="step">
-            <img src="../img/site/schedule1.png" alt="" />
-            <p>
-              <a
-                href="https://toodaiaka81.bitfan.id/"
-                target="_blank"
-                rel="noopener"
-              >
-                サイト
-              </a>
-              のトップ画面をスクロールすると「SCHEDULE」ボタンがある。
-            </p>
+            <img src="../img/site/toSite1.png" alt="" />
+            <p>フォローしている人のアイコンをタップする。</p>
           </div>
           <div class="step">
-            <img src="../img/site/schedule2.png" alt="" />
-            <p>画面左上のハンバーガーをタップして開いたメニューにもある。</p>
+            <img src="../img/site/toSite2.png" alt="" />
+            <p>「メンバー情報へ」をタップ</p>
+          </div>
+          <div class="step">
+            <img src="../img/site/toSite3.png" alt="" />
+            <p>「サイトを見る」をタップ</p>
+          </div>
+          <div class="step">
+            <img src="../img/site/toSite4.png" alt="" />
+            <p>到着！</p>
           </div>
         </div>
         <div class="back-button">
