add_text_to_message

--- a/chat/message.html
+++ b/chat/message.html
@@ -25,7 +25,9 @@
           </div>
           <div class="step">
             <img src="../img/chat/chat6.png" alt="" />
-            <p>メッセージを入力して「送信」ボタンをタップ。</p>
+            <p>
+              メッセージを入力して「送信」ボタンをタップ。写真も送信することができるが、投稿した写真を他の人がダウンロードすることはできない
+            </p>
           </div>
         </div>
         <div class="back-button">
