add_step_to_howToGo

--- a/site/howToGo.html
+++ b/site/howToGo.html
@@ -32,6 +32,12 @@
             <img src="../img/site/toSite4.png" alt="" />
             <p>到着！</p>
           </div>
+          <div class="step">
+            <img src="../img/site/toSite5.png" alt="" />
+            <p>
+              矢印アイコンをタップするとアプリ画面まで戻ってしまうので、サイト内を移動する場合はハンバーガーメニューやページ内のリンクを使う。
+            </p>
+          </div>
         </div>
         <div class="back-button">
           <a href="../index.html">戻る</a>
