--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
                 <a href="./site/howToGo.html"> ファンサイトを見る。 </a>
               </li>
               <li>
+                <a href="./site/howToGetNumber.html">
+                  会員番号を確認する。（チケットの先行販売等に使用）
+                </a>
+              </li>
+              <li>
                 <a href="./site/schedule.html"> スケジュールを確認する。 </a>
               </li>
               <li>
